# gameboy-emulator

./: .gitignore  CMakeLists.txt  README.md
include/: cpu.hpp  emulator.hpp  memory.hpp  ppu.hpp  rom.hpp  types.hpp  utils.hpp
src/: cpu.cpp  emulator.cpp  main.cpp  memory.cpp  ppu.cpp  rom.cpp
test/: emulator_sanity.cpp  emulator_test.cpp
